# app/Http/Controllers/RoomController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers;
 use App\Models\Room;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
+use App\Models\Hotel;
 
 class RoomController extends Controller
 {
@@ -71,6 +72,42 @@ public function store(Request $request)
 
         return Room::all();
 
+    }
+
+        /**
+     * @OA\Get(
+     *     path="/hotels/rooms/{hotel_id}",
+     *     tags={"Hotel Room"},
+     *     summary="Show hotel room list",
+     *     description="Show hotel room list",
+     *     operationId="ShowHotelRoomList",
+     *     
+     * @OA\Parameter(
+     *          name="hotel_id",
+     *          description="hotel_id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     * 
+     * 
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     )
+     * )
+     */
+    public function showHotelRooms($id)
+    {
+        $HotelRoom = Hotel::where('hotels.hotel_id',$id)
+        ->with('rooms')
+        ->first();
+
+        return response()->json([
+            'data' => $HotelRoom
+        ]);
     }
 
 
